Object cache with NetworkRequest

--- a/metsearch/metsearch.ui
+++ b/metsearch/metsearch.ui
@@ -245,6 +245,37 @@
            </layout>
           </widget>
          </item>
+         <item>
+          <layout class="QHBoxLayout" name="timer_layout">
+           <item>
+            <widget class="QLabel" name="nextrefresh_label">
+             <property name="text">
+              <string>Seconds to next refresh:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="countdown_label">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_2">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </item>
         </layout>
        </widget>
       </item>
