--- a/metsearch/metsearch.ui
+++ b/metsearch/metsearch.ui
@@ -225,7 +225,7 @@
               </property>
               <layout class="QVBoxLayout" name="verticalLayout">
                <item>
-                <widget class="QWidget" name="thumbnail_widget" native="true">
+                <widget class="QWidget" name="image_widget" native="true">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                    <horstretch>0</horstretch>
